--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
               id="username"
               name="username" 
               class="form-control"
-              ngModel>
+              ngModel
+              required>
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
           <div class="form-group">
@@ -20,17 +21,31 @@
               id="email" 
               name="email"
               class="form-control"
-              ngModel>
+              ngModel
+              required
+              email
+              #email="ngModel">
+              <!-- email attribute is also a directive of angular/form -->
+              <!-- #email is a template variable so you can pass value and used it within angular html template-->
+              <p class="help-block" *ngIf="!email.valid && email.touched">Please enter valid email</p>
           </div>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
-          <select id="secret" class="form-control" name="question" ngModel>
-            <option value="pet">Your first Pet?</option>
-            <option value="teacher">Your first teacher?</option>
+          <select 
+            id="secret" 
+            class="form-control" 
+            name="question" 
+            ngModel>
+              <option value="pet">Your first Pet?</option>
+              <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button 
+          class="btn btn-primary" 
+          type="submit"
+          [disabled]="!f.valid">Submit</button>
+          <!--- [disabled]="condition" f here is the ngForm object above form tag itself. It's also from angular/form directives -->
       </form>
     </div>
   </div>
