--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div 
+          id="user-data"
+          ngModelGroup="userData"
+          #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input 
@@ -29,6 +32,7 @@
               <!-- #email is a template variable so you can pass value and used it within angular html template-->
               <p class="help-block" *ngIf="!email.valid && email.touched">Please enter valid email</p>
           </div>
+          <p *ngIf="!userData.valid && userData.touched" class="text-danger">User Group Data is not valid</p>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
