--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,14 @@
               <!-- #email is a template variable so you can pass value and used it within angular html template-->
               <p class="help-block" *ngIf="!email.valid && email.touched">Please enter valid email</p>
           </div>
+          <div class="form-group">
+            <div class="form-check" *ngFor="let gender of genders">
+              <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}">
+              <label class="form-check-label" for="input{{ gender }}">
+                {{ gender }}
+              </label>
+            </div>
+          </div>
           <p *ngIf="!userData.valid && userData.touched" class="text-danger">User Group Data is not valid</p>
         </div>
         <div class="form-group">
