--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
               ngModel
               required>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input 
@@ -34,7 +34,7 @@
           </div>
           <div class="form-group">
             <div class="form-check" *ngFor="let gender of genders">
-              <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}">
+              <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}" ngModel>
               <label class="form-check-label" for="input{{ gender }}">
                 {{ gender }}
               </label>
