--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
           </div>
           <div class="form-group">
             <div class="form-check" *ngFor="let gender of genders">
-              <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}" ngModel>
+              <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}" value="{{gender}}" ngModel>
               <label class="form-check-label" for="input{{ gender }}">
                 {{ gender }}
               </label>
@@ -69,6 +69,18 @@
           [disabled]="!f.valid">Submit</button>
           <!--- [disabled]="condition" f here is the ngForm object above form tag itself. It's also from angular/form directives -->
       </form>
+    </div>
+  </div>
+</div>
+
+<div class="data-table row" *ngIf="isSubmitted">
+  <div class="container">
+    <div class="col-6">
+      <p>Usernam: {{ user.username }} </p>
+      <p>Email:  {{ user.email }} </p>
+      <p>Gender: {{ user.gender }} </p>
+      <p>Secret Question: {{ user.question }}</p>
+      <p>Hint: {{ user.hint }} </p>
     </div>
   </div>
 </div>
