--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,86 +1,7 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div 
-          id="user-data"
-          ngModelGroup="userData"
-          #userData="ngModelGroup">
-          <div class="form-group">
-            <label for="username">Username</label>
-            <input 
-              type="text" 
-              id="username"
-              name="username" 
-              class="form-control"
-              ngModel
-              required>
-          </div>
-          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
-          <div class="form-group">
-            <label for="email">Mail</label>
-            <input 
-              type="email" 
-              id="email" 
-              name="email"
-              class="form-control"
-              ngModel
-              required
-              email
-              #email="ngModel">
-              <!-- email attribute is also a directive of angular/form -->
-              <!-- #email is a template variable so you can pass value and used it within angular html template-->
-              <p class="help-block" *ngIf="!email.valid && email.touched">Please enter valid email</p>
-          </div>
-          <div class="form-group">
-            <div class="form-check" *ngFor="let gender of genders">
-              <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}" value="{{gender}}" ngModel>
-              <label class="form-check-label" for="input{{ gender }}">
-                {{ gender }}
-              </label>
-            </div>
-          </div>
-          <p *ngIf="!userData.valid && userData.touched" class="text-danger">User Group Data is not valid</p>
-        </div>
-        <div class="form-group">
-          <label for="secret">Secret Questions</label>
-          <select 
-            id="secret" 
-            class="form-control" 
-            name="question" 
-            [ngModel]="defaultQuestion">
-              <option value="pet">Your first Pet?</option>
-              <option value="teacher">Your first teacher?</option>
-          </select>
-          <!-- [ngModel]="defaultQuestion" *** is a variable from its component ts using single binding/display value of [ngModel] -->
-        </div>
-        <div class="form-group">
-          <textarea
-            class="form-control"
-            name="questionAnswer"
-            rows="3"
-            [(ngModel)]="answer"></textarea>
-            <!--  [(ngModel)]="answer" *** is a two way binding wherein you get data from answer and then displays is at the same time -->
-        </div>
-        <p> Your reply: {{ answer }}</p>
-        <button 
-          class="btn btn-primary" 
-          type="submit"
-          [disabled]="!f.valid">Submit</button>
-          <!--- [disabled]="condition" f here is the ngForm object above form tag itself. It's also from angular/form directives -->
-      </form>
-    </div>
+<div class="header">
+  <div class="container">
+    <h1>Anglar Forms</h1>
   </div>
 </div>
 
-<div class="data-table row" *ngIf="isSubmitted">
-  <div class="container">
-    <div class="col-6">
-      <p>Usernam: {{ user.username }} </p>
-      <p>Email:  {{ user.email }} </p>
-      <p>Gender: {{ user.gender }} </p>
-      <p>Secret Question: {{ user.question }}</p>
-      <p>Hint: {{ user.hint }} </p>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
