--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,11 +1,9 @@
 <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <form (ngSubmit)="onSubmit()" #f="ngForm">
+        <form>
           <div 
-            id="user-data"
-            ngModelGroup="userData"
-            #userData="ngModelGroup">
+            id="user-data">
             <div class="form-group">
               <label for="username">Username</label>
               <input 
@@ -13,10 +11,9 @@
                 id="username"
                 name="username" 
                 class="form-control"
-                ngModel
                 required>
             </div>
-            <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
+            <button class="btn btn-default" type="button" >Suggest an Username</button>
             <div class="form-group">
               <label for="email">Mail</label>
               <input 
@@ -24,26 +21,23 @@
                 id="email" 
                 name="email"
                 class="form-control"
-                ngModel
-                required
-                email
-                #email="ngModel">
-                <p class="help-block" *ngIf="!email.valid && email.touched">Please enter valid email</p>
+                required>
+
             </div>
             <div class="form-group">
               <div class="form-check" *ngFor="let gender of genders">
-                <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}" value="{{gender}}" ngModel>
+                <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}" value="{{gender}}">
                 <label class="form-check-label" for="input{{ gender }}">
                   {{ gender }}
                 </label>
               </div>
             </div>
-            <p *ngIf="!userData.valid && userData.touched" class="text-danger">User Group Data is not valid</p>
+    
           </div>
           <button 
             class="btn btn-primary" 
             type="submit"
-            [disabled]="!f.valid">Submit</button>
+            >Submit</button>
             <!--- [disabled]="condition" f here is the ngForm object above form tag itself. It's also from angular/form directives -->
         </form>
       </div>
