--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <form>
+        <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
           <div 
             id="user-data">
             <div class="form-group">
@@ -11,6 +11,7 @@
                 id="username"
                 name="username" 
                 class="form-control"
+                formControlName="username"
                 required>
             </div>
             <button class="btn btn-default" type="button" >Suggest an Username</button>
@@ -20,13 +21,19 @@
                 type="email" 
                 id="email" 
                 name="email"
+                formControlName="email"
                 class="form-control"
                 required>
 
             </div>
             <div class="form-group">
               <div class="form-check" *ngFor="let gender of genders">
-                <input class="form-check-input" type="radio" name="inputGenders" id="input{{ gender }}" value="{{gender}}">
+                <input 
+                    formControlName="gender"
+                    class="form-check-input" 
+                    type="radio" 
+                    id="input{{ gender }}" 
+                    [value]="gender">
                 <label class="form-check-label" for="input{{ gender }}">
                   {{ gender }}
                 </label>
