--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -11,8 +11,7 @@
                 id="username"
                 name="username" 
                 class="form-control"
-                formControlName="username"
-                required>
+                formControlName="username">
             </div>
             <button class="btn btn-default" type="button" >Suggest an Username</button>
             <div class="form-group">
@@ -22,8 +21,7 @@
                 id="email" 
                 name="email"
                 formControlName="email"
-                class="form-control"
-                required>
+                class="form-control">
 
             </div>
             <div class="form-group">
