--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -12,8 +12,10 @@
                 name="username" 
                 class="form-control"
                 formControlName="username">
+                <span 
+                    *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched"
+                    class="text-danger">Please enter valid username</span>
             </div>
-            <button class="btn btn-default" type="button" >Suggest an Username</button>
             <div class="form-group">
               <label for="email">Mail</label>
               <input 
@@ -22,7 +24,9 @@
                 name="email"
                 formControlName="email"
                 class="form-control">
-
+                <span 
+                    *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched"
+                    class="text-danger">Please enter valid email!</span>
             </div>
             <div class="form-group">
               <div class="form-check" *ngFor="let gender of genders">
