--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -13,7 +13,14 @@
                         formControlName="username">
                         <span 
                             *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
-                            class="text-danger">Please enter valid username</span>
+                            class="text-danger">
+                            <span 
+                                *ngIf="signupForm.get('userData.username').errors['required']"
+                                class="text-danger">This field is required</span>
+                            <span 
+                                *ngIf="signupForm.get('userData.username').errors['blockedUsername']"
+                                class="text-danger">Username is blocked/invalid</span>
+                        </span>
                 </div>
                 <div class="form-group">
                     <label for="email">Mail</label>
